tests/invalid/attribute_on_non_class/main.py
def run_case() -> None:
    x: int = 5

    y: int = x.foo

if __name__ == "__main__":
    run_case()
